@@ -438,6 +438,8 @@ Release 2.5.0 - UNRELEASED
     HDFS-5381. ExtendedBlock#hashCode should use both blockId and block pool ID    
     (Benoy Antony via Colin Patrick McCabe)
 
+    HDFS-6329. WebHdfs does not work if HA is enabled on NN but logical URI is
+    not configured. (kihwal)
 
 Release 2.4.1 - UNRELEASED
 
